2007-12-10  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_dev/src/serial/CMakeLists.txt: build mech update.

	* src/libYARP_dev/src/microphone/CMakeLists.txt: build mechanism
	update.

	* src/libYARP_dev/src/ffmpeg/CMakeLists.txt: updated device for
	new build mechanism.

2007-12-07  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_dev/src/ControlBoardInterfacesImpl.inl: moved
	this file to ../include/yarp/dev, since it is needed by users
	of ControlBoardInterfacesImpl.h.  A redirecting file was left 
	at this location.

2007-12-06  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/PortCoreOutputUnit.cpp: fix double
	send for local carrier.

	* src/libYARP_OS/yarp/yarpserver.cpp: added trivial
	"yarpserver" program that works just like "yarp server"
	(but is easier for windows users to click on)

	* src/libYARP_OS/src/Contact.cpp: the isValid() check was a
	little, how should I say this, completely and utterly wrong.

2007-12-05  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_sig/src/Image.cpp (_alloc_data): implement 
	inversion of row access for bottom-left origin

2007-12-04  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_sig/include/yarp/sig/Image.h: propagate origin
	top-left or bottom-left flag, for better round-tripping with
	OpenCV.

2007-12-03  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/yarpdev/yarpview.cpp: now can do everything the GTK+ viewer
	can do, via the wxsdl module.

	* src/modules/wxsdl/WxsdlWriter.cpp: replicate all the documented
	flags of the GTK+ viewer: name, width, height, x, y, and out (port 
	for clicks)

2007-12-02  Giacomo Spigler  <spiglerg@gmail.com>
	* /modules/cuda, /modules/nvidia, /libYARP_dev/include/yarp/dev/GPUInterface.h : Added width() and height() methods to GPU objects, in order to be able to get current working space's dimensions.

2007-12-01  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_sig/include/yarp/sig/ImageFile.h: read/write