@@ -338,3 +338,5 @@ MARK_AS_ADVANCED(
   OPENCV_CVCAM_LIBRARY
   OPENCV_DIR
 )
+
+SET(OpenCV_FOUND OPENCV_FOUND)
