@@ -1,6 +1,6 @@
 FIND_PACKAGE(YARP REQUIRED)
 
-FIND_PACKAGE(FFMPEG REQUIRED)
+FIND_PACKAGE(FFMPEG)
 
 IF (FFMPEG_FOUND)
 
