@@ -25,6 +25,8 @@ ADD_SUBDIRECTORY(${YARP_DIR}/src/libYARP_dev/src/microphone
                  ${CMAKE_CURRENT_BINARY_DIR})
 ADD_SUBDIRECTORY(${YARP_DIR}/src/libYARP_dev/src/serial 
                  ${CMAKE_CURRENT_BINARY_DIR})
+ADD_SUBDIRECTORY(${YARP_DIR}/src/libYARP_dev/src/opencv_grabber
+                 ${CMAKE_CURRENT_BINARY_DIR})
 END_DEVICE_LIBRARY(yarpmod)
 
 # Done!
