@@ -1,6 +1,8 @@
 2007-12-10  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
-	* src/libYARP_dev/src/serial/CMakeLists.txt: build mech update.
+	* src/libYARP_dev/src/opencv_grabber/CMakeLists.txt: build update.
+
+	* src/libYARP_dev/src/serial/CMakeLists.txt: build update.
 
 	* src/libYARP_dev/src/microphone/CMakeLists.txt: build mechanism
 	update.
